--- a/Web.config
+++ b/Web.config
@@ -1,18 +1,12 @@
 <?xml version="1.0"?>
 <configuration>
   <connectionStrings>
-    <add name="ConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\db.mdb;Persist Security Info=True"
-      providerName="System.Data.OleDb" />
-    <add name="city" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\215327644elad.mdb;Persist Security Info=True"
-      providerName="System.Data.OleDb" />
-    <add name="ConnectionString4" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\215327644elad.mdb"
-      providerName="System.Data.OleDb" />
-    <add name="moviessongtv" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\215327644elad.mdb"
-      providerName="System.Data.OleDb" />
-    <add name="newly" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\215327644elad.mdb"
-      providerName="System.Data.OleDb" />
-    <add name="newconnect" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\215327644elad.mdb"
-      providerName="System.Data.OleDb" />
+    <add name="ConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\db.mdb;Persist Security Info=True" providerName="System.Data.OleDb"/>
+    <add name="city" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\215327644elad.mdb;Persist Security Info=True" providerName="System.Data.OleDb"/>
+    <add name="ConnectionString4" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\215327644elad.mdb" providerName="System.Data.OleDb"/>
+    <add name="moviessongtv" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\215327644elad.mdb" providerName="System.Data.OleDb"/>
+    <add name="newly" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\215327644elad.mdb" providerName="System.Data.OleDb"/>
+    <add name="newconnect" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\215327644elad.mdb" providerName="System.Data.OleDb"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
